# adas-acc-aeb-function

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: io_contract.md  requirements.md  traceability.md
include/acc/: config.hpp  dummy.hpp  fsm.hpp  function.hpp  limiters.hpp  plausibility.hpp  types.hpp
include/sim/: scenario.hpp
scenarios/: cruise_step.csv  follow_constant_lead.csv  lead_brake.csv
src/acc/: dummy.cpp  fsm.cpp  function.cpp  plausibility.cpp
src/sim/: scenario.cpp  sim_runner.cpp
tests/: test_dummy.cpp  test_fsm.cpp  test_requirements.cpp  test_scenarios.cpp
tools/: evaluate_kpis.py  plot_results.py
